# aquamarine

./: .env.sample  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  alembic.ini  aquamarine.db  pyproject.toml  pyproject.toml.bkup  requirements.txt  setup.py  spec.md  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
migrations/: env.py
migrations/versions/: 5eb42bb3018f_initial_migration.py
src/: aquamarine.py
src/application/: device_service.py  models.py  repositories.py  services.py
src/aquamarine/: __init__.py  aquamarine.py  cli.py
src/hardware/: __init__.py  gpio_controller.py  gpio_factory.py  gpio_platform.py
src/infrastructure/: database.py  models.py  repositories.py
src/log/: __init__.py
src/presentation/: api.py
tasks/: ._create_schedule_api.md  change_device.md  create_schedule_api.md  create_schedule_function.md  delete_device.md  get_gpio_status_from_hardware.md  use_gpio_controller_but_not_mock.md
tasks/plan/: schedule_api_implementation_plan.md  schedule_function_implementation_plan.md
tests/: ._test_infrastructure.py  __init__.py  conftest.py  test_application.py  test_aquamarine.py  test_hardware.py  test_infrastructure.py  test_presentation.py  test_schedule_executor.py
