[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aquamarine"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "aquamarine", email = "mugumori@gmail.com"}
]
maintainers = [
  {name = "aquamarine", email = "mugumori@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]


[project.scripts]
aquamarine = "src.aquamarine.aquamarine:main"

[project.urls]

bugs = "https://github.com/ugumori/aquamarine/issues"
changelog = "https://github.com/ugumori/aquamarine/blob/master/changelog.md"
homepage = "https://github.com/ugumori/aquamarine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

